packages/theme-chalk/src/collapse.scss
@use 'mixins/mixins' as *;
@use 'mixins/var' as *;
@use 'common/var' as *;

@include b(collapse) {
  @include set-component-css-var('collapse', $collapse);

  border-top: 1px solid getCssVar('collapse-border-color');
  border-bottom: 1px solid getCssVar('collapse-border-color');
}

.#{$namespace}-collapse-icon-position {
  &-left {
    .#{$namespace}-collapse-item__ {
      &header {
        gap: 8px;
      }
      &title {
        order: 1;
      }
    }
  }

  &-right {
    .#{$namespace}-collapse-item__header {
      padding-right: 8px;
    }
  }
}

